--- a/index.html
+++ b/index.html
@@ -16,37 +16,38 @@
     </header>
   </div>
 
-  <div class = "picture">
-    <h4>
-      SMASH WITH ALL YOUR MIGHT!
-    </h4>
-    <img src = "images/Midoriya2.webp">
-  </div>
+  <div class = "container">
+    <div class = "picture">
+      <h4>
+        SMASH WITH ALL YOUR MIGHT!
+      </h4>
+      <img src = "images/Midoriya2.webp">
+    </div>
+    <div class = "content">
+      <h2>
+        About Deku
+      </h2>
+      <p>
+        Izuku Midoriya, nicknamed Deku, is the main protagonist of the My Hero Academia franchise.
+      </p>
 
-  <div class = "content">
-    <h2>
-      About Deku
-    </h2>
-    <p>
-      Izuku Midoriya, nicknamed Deku, is the main protagonist of the My Hero Academia franchise.
-    </p>
+      <h2>
+        Deku's Characteristics
+      </h2>
+      <ul>
+        <li> He is dedicated to doing what he thinks is right and he strives to make the world a better place. </li>
+        <li> He is creative, imaginative, and empathetic.</li>
+        <li> He is a great listener. He prefers one-on-one situations rather than group activities. </li>
+      </ul>
 
-    <h2>
-      Deku's Characteristics
-    </h2>
-    <ul>
-      <li> He is dedicated to doing what he thinks is right and he strives to make the world a better place. </li>
-      <li> He is creative, imaginative, and empathetic.</li>
-      <li> He is a great listener. He prefers one-on-one situations rather than group activities. </li>
-    </ul>
-
-    <h2>
-      Deku's Quirk
-    </h2>
-    <p>
-      He was born not possessing a quirk, but that doesn't stopped him from doing what he wants.. Being a hero. 
-      Number 1 Hero, 'All Might' would later give his quirk to Deku. The <b>"One for All"</b> quirk.
-    </p>
+      <h2>
+        Deku's Quirk
+      </h2>
+      <p>
+        He was born not possessing a quirk, but that doesn't stopped him from doing what he wants.. Being a hero. 
+        Number 1 Hero, 'All Might' would later give his quirk to Deku. The <b>"One for All"</b> quirk.
+      </p>
+    </div>
   </div>
 
     <img src = "images/groupphoto2.jpg" class = "group-photo">
