--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         Deku's Quirk
       </h2>
       <p>
-        He was born not possessing a quirk, but that doesn't stopped him from doing what he wants.. Being a hero. 
-        Number 1 Hero, 'All Might' would later give his quirk to Deku. The <b>"One for All"</b> quirk.
+        He was born without a quirk, but that doesn't stop him from doing what he wants. Being a hero. 
+        Number 1 hero, All Might, would later give his quirk to Deku. The <b>"One for All"</b> quirk.
       </p>
     </div>
   </div>
