--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         Deku's Quirk
       </h2>
       <p>
-        He was born without a quirk, but that doesn't stop him from doing what he wants. Being a hero. 
-        Number 1 hero, All Might, would later give his quirk to Deku. The <b>"One for All"</b> quirk.
+        He was born not possessing a quirk, but that doesn't stopped him from doing what he wants.. Being a hero. 
+        Number 1 Hero, 'All Might' would later give his quirk to Deku. The <b>"One for All"</b> quirk.
       </p>
     </div>
   </div>
@@ -60,7 +60,7 @@
       Deku's Friends
     </h2>
     <div class = "friends-list">
-        <a href = "" target = "_blank" title = "Maui's Webpage"><img src = "images/luffy2.png"></a>
+        <a href = "" target = "_blank" title = "Maui's Webpage"><img src = "images/anya.png"></a>
         <a href = "https://rommeljonmendoza.github.io/WS02-MID1/" target = "_blank" title = "Rommel's Webpage"><img src = "images/cyborg.png"></a>
         <a href = "https://vincent2604.github.io/WS02-MID1/" target = "_blank" title = "Kirby's Webpage"><img src = "images/petergriffin.png"></a>
     </div>
