--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     </div>
     <div class = "content">
       <h2>
-        About Deku
+        ABOUT DEKU
       </h2>
       <p>
         Izuku Midoriya, nicknamed Deku, is the main protagonist of the My Hero Academia franchise.
       </p>
 
       <h2>
-        Deku's Characteristics
+        DEKU'S CHARACTERISTICS
       </h2>
       <ul>
         <li> He is dedicated to doing what he thinks is right and he strives to make the world a better place. </li>
@@ -41,7 +41,7 @@
       </ul>
 
       <h2>
-        Deku's Quirk
+        DEKU'S QUIRK
       </h2>
       <p>
         He was born not possessing a quirk, but that doesn't stopped him from doing what he wants.. Being a hero. 
@@ -60,9 +60,9 @@
       Deku's Friends
     </h2>
     <div class = "friends-list">
-        <a href = "" target = "_blank" title = "Maui's Webpage"><img src = "images/anya.png"></a>
+        <a href = "https://mauiicruz.github.io/WS02-MID1/" target = "_blank" title = "Maui's Webpage"><img src = "images/anya.png"></a>
         <a href = "https://rommeljonmendoza.github.io/WS02-MID1/" target = "_blank" title = "Rommel's Webpage"><img src = "images/cyborg.png"></a>
-        <a href = "https://vincent2604.github.io/WS02-MID1/" target = "_blank" title = "Kirby's Webpage"><img src = "images/petergriffin.png"></a>
+        <a href = "https://aerown03.github.io/WS02-MID1/" target = "_blank" title = "Aerons's Webpage"><img src = "images/raven.png"></a>
     </div>
 
     <footer>
