--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title> Izuku Midoriya </title>
     <link rel = "stylesheet" type = "text/css" href = "css/style.css">
     <link rel = "shortcut icon" type = "x-icon" href = "images/Midoriya.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter&family=IM+Fell+DW+Pica&display=swap" rel="stylesheet">
   </head>
 
 <body>
