--- a/index.html
+++ b/index.html
@@ -1,76 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title> Izuku Midoriya </title>
-    <link rel = "stylesheet" type = "text/css" href = "css/style.css">
-    <link rel = "shortcut icon" type = "x-icon" href = "images/Midoriya.png">
+<head>
+  <title> Deku </title>
+  <link rel = "stylesheet" type = "text/css" href = "css/style.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter&family=IM+Fell+DW+Pica&display=swap" rel="stylesheet">
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+</head>
 
 <body>
-  <div>
-    <header>
-      <img src = "images/Midoriya.png" class = "midoriya-img">
-      <h1>
-        IZUKU 'DEKU' MIDORIYA
-      </h1>
-    </header>
-  </div>
+  <header>
+    <img src = "images/deku-gif.gif" class = "deku-img">
+    <h1> IZUKU "DEKU" MIDORIYA </h1>
+  </header>
 
-  <div class = "container">
-    <div class = "picture">
-      <h4>
-        SMASH WITH ALL YOUR MIGHT!
-      </h4>
-      <img src = "images/Midoriya2.webp">
-    </div>
-    <div class = "content">
-      <h2>
-        ABOUT DEKU
-      </h2>
-      <p>
-        Izuku Midoriya, nicknamed Deku, is the main protagonist of the My Hero Academia franchise.
-      </p>
+  <div class = "box">
+    <div class = "box2">
+      <div class = "box3">
+        <div class = "box-for-image">
+          <img src = "images/dekudeku.png" class = "deku-pic">
+        </div>
+      <div class = "box-description">
+        <h2>
+          ABOUT DEKU
+        </h2>
+        <p>
+          Izuku Midoriya, nicknamed Deku, is the main protagonist of the My Hero Academia franchise.
+        </p>
 
-      <h2>
-        DEKU'S CHARACTERISTICS
-      </h2>
-      <ul>
-        <li> He is dedicated to doing what he thinks is right and he strives to make the world a better place. </li>
-        <li> He is creative, imaginative, and empathetic.</li>
-        <li> He is a great listener. He prefers one-on-one situations rather than group activities. </li>
-      </ul>
-
-      <h2>
-        DEKU'S QUIRK
-      </h2>
-      <p>
-        He was born not possessing a quirk, but that doesn't stopped him from doing what he wants.. Being a hero. 
-        Number 1 Hero, 'All Might' would later give his quirk to Deku. The <b>"One for All"</b> quirk.
-      </p>
+        <h2>
+          DEKU'S CHARACTERISTICS
+        </h2>
+        <ul>
+          <li> He is wholesome</li>
+          <li> He is dedicated to doing what he thinks is right and he strives to make the world a better place. </li>
+          <li> He is creative, imaginative, and empathetic.</li>
+          <li> He is a great listener. He prefers one-on-one situations rather than group activities. </li>
+        </ul>
+      </div>
+      </div>
     </div>
   </div>
+  <div class = "box-group-photo">
+    <img src = "images/group-photo.jpg">
+    <p> This is Deku with his classmates, professors, and batchmates from Class 1-B at U.A Sports Festival </p>
+  </div>
+  <hr>
 
-    <img src = "images/groupphoto2.jpg" class = "group-photo">
-    <p class = "group-photo-caption">
-      This is Deku with his professors, classmates, and batchmates from Class 1-B at U.A Sports Festival.
-    </p>
-    <hr>
+  <h2 class = "deku-friends">
+    Deku's Friends
+  </h2>
+  <div class = "friends-list">
+      <a href = "https://mauiicruz.github.io/WS02-MID1/" target = "_blank" title = "Maui's Webpage"><img src = "images/anya.png"></a>
+      <a href = "https://rommeljonmendoza.github.io/WS02-MID1/" target = "_blank" title = "Rommel's Webpage"><img src = "images/cyborg.png"></a>
+      <a href = "https://aerown03.github.io/WS02-MID1/" target = "_blank" title = "Aerons's Webpage"><img src = "images/raven.png"></a>
+  </div>
 
-    <h2 class = "deku-friends">
-      Deku's Friends
-    </h2>
-    <div class = "friends-list">
-        <a href = "https://mauiicruz.github.io/WS02-MID1/" target = "_blank" title = "Maui's Webpage"><img src = "images/anya.png"></a>
-        <a href = "https://rommeljonmendoza.github.io/WS02-MID1/" target = "_blank" title = "Rommel's Webpage"><img src = "images/cyborg.png"></a>
-        <a href = "https://aerown03.github.io/WS02-MID1/" target = "_blank" title = "Aerons's Webpage"><img src = "images/raven.png"></a>
-    </div>
-
-    <footer>
-      Made by <a href = "https://www.instagram.com/ppzbndc/" target = "_blank" title = "Creator's instagram account">@ppzbndc</a>, &#169 2023
-    </footer>
+  <footer>
+    <p> Made by <span class = "link"><a href = "https://www.instagram.com/ppzbndc/"> Pipz </a></span>, &#169; 2023 </p>
+  </footer>
 </body>
 </html>
