--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title> Deku </title>
   <link rel = "stylesheet" type = "text/css" href = "css/style.css">
+  <link rel = "icon" type = "x-shortcut" href = "images/deku-chibi.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
