--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <img src = "images/deku-gif.gif" class = "deku-img">
+    <img src = "images/deku2-gif.gif" class = "deku-img">
     <h1> IZUKU "DEKU" MIDORIYA </h1>
   </header>
 
@@ -50,7 +50,7 @@
   <hr>
 
   <h2 class = "deku-friends">
-    Deku's Friends
+    Deku's Friends:
   </h2>
   <div class = "friends-list">
       <a href = "https://mauiicruz.github.io/WS02-MID1/" target = "_blank" title = "Maui's Webpage"><img src = "images/anya.png"></a>
