--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </p>
 
         <h2>
-          DEKU'S CHARACTERISTICS
+          DEKU'S CHARACTERISTICS:
         </h2>
         <ul>
           <li> He is wholesome</li>
