--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           DEKU'S CHARACTERISTICS:
         </h2>
         <ul>
-          <li> He is wholesome</li>
+          <li> He is wholesome.</li>
           <li> He is dedicated to doing what he thinks is right and he strives to make the world a better place. </li>
           <li> He is creative, imaginative, and empathetic.</li>
           <li> He is a great listener. He prefers one-on-one situations rather than group activities. </li>
